<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.moodtracker.ui.home.newthought.NewThoughtViewModel" />
        
        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/newThoughtThoughtLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/newThoughtTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_thought"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:textSize="24sp"
                    android:dateTimeText="@{viewModel.currentDateTime}" />

                <Button
                    android:id="@+id/newThoughtDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_date"
                    android:onClick="@{() -> viewModel.onShowDateTimePicker()}"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onToggleShowDescription()}"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:drawableEnd="@drawable/ic_help_outline_grey_18dp"
                android:text="@string/worry_type"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:text="@string/current_hypothetical_explanation"
                android:visibility="@{viewModel.showCurrentHypotheticalDescription ? View.VISIBLE : View.GONE}"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/newThoughtCurrentRadioButton"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/newThoughtCurrentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onTypeSelected(0)}"
                    android:text="@string/current" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onTypeSelected(1)}"
                    android:text="@string/hypothetical"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/severity"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/one_to_ten"
                android:selectedItemPosition="@={viewModel.severity}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="32dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newMoodCommentsEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newMoodCommentsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.worryDescription}"
                    android:lines="6"
                    android:maxLength="500"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:gravity="top|start" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/is_private"
                android:onCheckedChanged="@{(switch, checked) -> viewModel.onTogglePrivate(checked)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textAlignment="center"
                android:text="@string/private_explanation" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="48dp"
                android:enabled="@{viewModel.canSubmit}"
                android:text="@string/submit"
                android:onClick="@{() -> viewModel.onSubmit()}"/>

        </LinearLayout>
    </ScrollView>

</layout>