<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.moodtracker.ui.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/loginCoordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_moodsage_logo"
                android:layout_marginTop="32dp"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_email"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={viewModel.username}" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_short"
                android:layout_marginTop="32dp"
                android:onClick="@{() -> viewModel.onLoginPressed()}" />

            <TextView
                android:id="@+id/textView"
                android:text="@string/register_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> viewModel.onRegisterPressed()}"
                android:text="@string/register_short" />

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>