<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.settings.profile.ProfileFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.moodtracker.ui.home.settings.profile.ProfileViewModel" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_details"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
            android:text="@={viewModel.currentUser.forename}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
            android:text="@={viewModel.currentUser.surname}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
            android:text="@={viewModel.currentUser.email}"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_targets"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/mood" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/one_to_ten"
            app:selectedIntValue="@={viewModel.currentUser.moodTarget}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:text="@string/worry" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/one_to_ten"
            app:selectedIntValue="@={viewModel.currentUser.worryTarget}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/submit_changes"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> viewModel.onSubmitChanges()}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/internet_required_profile" />

    </LinearLayout>
</layout>