<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.moodtracker.ui.home.dashboard.DashboardViewModel" />
        
        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.home.dashboard.DashboardFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@{@string/dashboard_title(viewModel.currentUser.forename)}"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dashboard_subtitle"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/set_your_worries"
            android:visibility="@{viewModel.currentUser.moodTarget == 0 &amp;&amp; viewModel.currentUser.worryTarget == 0 ? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:weightSum="2"
            android:visibility="@{viewModel.currentUser.moodTarget == 0 &amp;&amp; viewModel.currentUser.worryTarget == 0 ? View.GONE : View.VISIBLE}"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                android:text="@{@string/mood_target_description(viewModel.averageMoodRating, viewModel.currentUser.moodTarget, viewModel.moodTargetMessage)}"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:text="@{@string/worry_target_description(viewModel.averageWorryRating, viewModel.currentUser.worryTarget, viewModel.worryTargetMessage)}"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/average_rating_chart_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/averageByDayBarChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:groupedBarChartData="@{viewModel.moodsByDayData}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/rating_over_time_chart_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/ratingOverTimeLineChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:lineChartData="@{viewModel.ratingsOverTime}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_hypothetical_split"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:pieChartData="@{viewModel.currentHypotheticalSplitData}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/worries_with_solution"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:pieChartData="@{viewModel.worriesWithSolutionsData}"/>


    </LinearLayout>
    </ScrollView>
</layout>